[package]
name = "ratatheme-derive"
version = "0.1.0"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
description = "Theme deserializer for Ratatui"
keywords = ["theme", "deserialize", "parse", "ratatui", "tui"]
repository = "https://github.com/preiter93/ratatheme"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
#
#
# toml = "0.8"
# # [dev-dependencies]
#
# [[example]]
# name = "theme"
