[package]
name = "ratatheme-internal"
version = "0.1.0"
description = "Ratatheme internals"
repository.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csscolorparser = { version = "0.7.0", features = ["serde"] }
ratatui = { version = "0.29.0" }
