[package]
name = "ratatheme-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
ratatheme-types = { version = "0.1.0", path = "../ratatheme-types" }
ratatui = "0.29.0"
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"

[dev_dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[[example]]
name = "theme"
