[package]
name = "ratatheme"
version = "0.1.0"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
description = "Theme deserializer for Ratatui"
keywords = ["theme", "deserialize", "parse", "ratatui", "tui"]
repository = "https://github.com/preiter93/ratatheme"
readme = "README.md"
license = "MIT"

[dependencies]
ratatheme-internal = { workspace = true }
ratatheme-derive = { workspace = true }

[dev-dependencies]
ratatui = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[[example]]
name = "theme"
