[package]
name = "tui-theme-builder-derive"
version = "0.1.0"
description = "tui-theme-builder proc-macros"
repository.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"

ratatui = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tui-theme-builder-internal = { workspace = true }

[dev-dependencies]
tui-theme-builder-internal = { workspace = true }
ratatui = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
