[package]
name = "tui-theme-builder-internal"
version = "0.1.0"
description = "tui-theme-builder internals"
repository.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csscolorparser = { version = "0.7.0", features = ["serde"] }
ratatui = { version = "0.29.0" }
